public/css/styles.css
html {
  height: 100%;
}

body {
  background-color: #FFFFFF;
  height: 100%;
  margin: 0;
}

/* Hide scrollbars in Safari */
html {
  scrollbar-width: none;
}

/* Hide scrollbars in Webkit */
body::-webkit-scrollbar {
  display: none;
}

::-webkit-scrollbar {
  display: none;
}

.pageContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100vh;
  width: 100%;
  align-items: center;
  position: relative;
}

@media only screen and (max-width: 770px) {
  .pageContainer {
    height: 90vh;
  }
}

.sectionContainer {
  display: flex;
  flex-flow: row wrap;
  column-gap: 60px;
  row-gap: 10px;
  align-items: center;
  margin: 0 20px;
  justify-content: center;
}

.nameContainer {
  display: flex;
  flex: 1 1 auto;
  width: 240px;
  max-width: 400px;
  flex-flow: row wrap;
  column-gap: 20px;
}

@media only screen and (max-width: 770px) {
  .nameContainer {
    justify-content: center;
    column-gap: 15px;
  }
}

.firstName, .lastName {
  font: 400 70px "Roboto";
  letter-spacing: 2px;
  color: #000000;
  text-shadow: 1px 1px 0 #FFFFFF, 2px 2px 0 #227DFF;
}

@media only screen and (max-width: 770px) {
  .firstName, .lastName {
    font-size: 50px;
  }
}

.resumeContainer {
  display: flex;
  flex-direction: column;
  max-width: 580px;
}

.email {
  font: 400 16px "Roboto";
  color: #000000;
  letter-spacing: 0.67px;
}

.headline {
  font: 300 16px "Roboto";
  color: #000000;
  letter-spacing: 0.67px;
  margin-top: 7px;
}

.logosContainer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-top: 2px solid #DDDDDD;
  border-bottom: 2px solid #DDDDDD;
  margin: 15px 0 20px 0;
  padding: 15px 0;
  row-gap: 10px;
}

.logo {
  width: 19%;
}

.unrealLogo {
  width: 10%;
}

.itemsContainer {
  display: flex;
  flex-direction: column;
  row-gap: 20px;
}

.itemContainer {
  display: flex;
  column-gap: 30px;
  row-gap: 5px;
  align-items: center;
}

@media (max-width: 767px) {
  .itemContainer {
    flex-wrap: wrap;
  }
}

.date {
  font: 400 14px "Roboto";
  color: #000000;
  letter-spacing: 0.53px;
  min-width: 130px;
}

@media (max-width: 767px) {
  .date {
    width: 100%;
  }
}

.company {
  font: 300 14px "Roboto";
  color: #000000;
  letter-spacing: 0.53px;
  min-width: 210px;
}

.position {
  font: 300 14px "Roboto";
  color: #000000;
  letter-spacing: 0.53px;
}

.picture {
  width: 100%;
  display: flex;
}

.tilesContainer {
  display: flex;
  flex-direction: row;
  flex-flow: row wrap;
  column-gap: 2px;
  row-gap: 2px;
}

.tilesContainer:not(:last-child) {
  padding-bottom: 100px
}

.textTile, .pictureTile {
  flex: 40%;
}

@media (max-width: 767px) {
  .textTile, .pictureTile {
    flex: 100%;
  }
}

.textTile {
  box-sizing: border-box;
  color: #000000;
  font: 300 16px "Roboto";
  letter-spacing: 0.67px;
  margin-top: 7px;
  padding: 30px;
  margin: auto;
}

@media (max-width: 767px) {
  .textTile {
    padding: 20px
  }
}

